Bug 316615 - Services not showing up when multiple files are selected
Summary: Services not showing up when multiple files are selected
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Frameworks and Libraries
Component: general (show other bugs)
Version: 4.10.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-12 19:18 UTC by Stefan Bogner
Modified: 2013-04-18 11:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 4.10.2


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Bogner 2013-03-12 19:18:42 UTC
When opening the context menu for a single file, in the Services submenu one can see all the services from the .desktop files in the services directory which is fine. This also works when multiple files with the same extension are selected. 

Once the extensions of the selected files differ though, only the services that have MimeType=all/allfiles; in the .desktop file. IMHO the services that have application/octet-stream as MimeType should show up in that case as well.

Reproducible: Always
Comment 1 David Faure 2013-03-12 19:20:35 UTC
Does this help?

http://www.davidfaure.fr/2013/kio_316615.diff
Comment 2 Stefan Bogner 2013-03-12 19:47:31 UTC
(In reply to comment #1)
> Does this help?
> 
> http://www.davidfaure.fr/2013/kio_316615.diff

Yes it does indeed. That was quick :-)
Thanks!
Comment 3 David Faure 2013-03-13 15:36:42 UTC
Git commit 4da8e6cd2d43346cad81ee4e008758de506c4d1d by David Faure.
Committed on 13/03/2013 at 16:20.
Pushed by dfaure into branch 'KDE/4.10'.

Add application/octet-stream, the new name for all/allfiles

M  +1    -1    kio/kio/kfileitemactions.cpp

http://commits.kde.org/kdelibs/4da8e6cd2d43346cad81ee4e008758de506c4d1d