Add application/octet-stream, the new name for all/allfiles

BUG: 316615